2002-12-07  Pavel Roskin  <proski@gnu.org>

	* file.c (is_wildcarded): Move ...
	* filegui.c: ... here.  Make static.

2002-12-01  Pavel Roskin  <proski@gnu.org>

	* cmd.c (do_edit_at_line): Set line to 0 to allow the editor to
	decide if the user cares about the initial line or not.
	* main.c: Set edit_one_file_start_line to 0 initially.

2002-11-29  Pavel Roskin  <proski@gnu.org>

	* setup.c: Add option_save_position to the options table.

2002-11-28  Pavel Roskin  <proski@gnu.org>

	* tree.c: Make struct WTree opaque.  Remove "done" flag - it's
	broken by design.
	(tree_selected_name): New function, return name of the currently
	selected entry.  Use it where WTree is opaque.
	* boxes.c (tree_callback): Don't check for the "done" flag - it
	causes closing the dialog on any key after mouse selection.

	* user.h: Don't include edit/edit-widget.h.
	* user.c: Include edit/edit-widget.h and edit/edit.h.

	* slint.c (getch): Return -1, not SLANG_GETKEY_ERROR, otherwise
	get_key_code() crashes when calling isalpha().

	* color.c (mc_init_pair) [HAVE_SLANG]: Pass "default", not NULL
	to SLtt_set_color() - it fixes transparency with the latest
	versions of S-Lang.  Treat foreground like background.

2002-11-20  Pavel Roskin  <proski@gnu.org>

	* main.c: Eliminate finish_program variable - mc can now exit
	immediately.

2002-11-17  Pavel Roskin  <proski@gnu.org>

	* screen.c (do_select): Mark panel as dirty.

	* boxes.c (init_disp_bits_box): Make static.

2002-11-15  Pavel Roskin  <proski@gnu.org>

	* main.c (main): Don't call subshell_get_console_attributes() if
	the subshell is disabled from the command line.

2002-11-14  Pavel Roskin  <proski@gnu.org>

	* myslang.h: Define getyx() macro.
	* layout.c (print_vfs_message): Preserve cursor position.

	* view.h: Make struct WView opaque, move non-interface parts ...
	* view.c: ... here.
	* layout.c: Use struct WView, not typedef WView.

	* cmd.c: Clean up includes, don't rely on edit.h.
