@@ -1,3 +1,7 @@
+2002-12-08  Pavel Roskin  <proski@gnu.org>
+
+	* util.c: Add functions for saving and loading file positions.
+
 2002-12-07  Pavel Roskin  <proski@gnu.org>
 
 	* file.c (is_wildcarded): Move ...
